Solve the bug and complete sprint 1